added background image, and text outline for 'search for artist'.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,35 @@
 html {
-    background-color: black;
+  background-image: url(https://i.pinimg.com/originals/e0/d6/6a/e0d66a03fdf7fecce02b8b76e141d325.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
 }
 
 #searchLabel {
-    font-size: 40px;
-    color: white;
+  font-size: 40px;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 #add-music {
-    margin-top: 2px;
-
+  margin-top: 2px;
 }
 
 #searchForm {
-    margin-top: 25px;
+  margin-top: 25px;
+  margin-bottom: 100px;
 }
 
-.searchResults{
-    color: white;
+.searchResults {
+  color: white;
 }
+
+/* @media only screen and (max-width: 750px) {
+    body {
+      background-image: url(https://i.pinimg.com/originals/64/ed/3a/64ed3a481498bccf61aafc4bf3151a2f.jpg);
+      background-size: auto;
+      opacity: 60%;
+      background-repeat: no-repeat;
+    }
+  } */
