--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,5 @@
 html {
-  background-image: url(https://i.pinimg.com/originals/e0/d6/6a/e0d66a03fdf7fecce02b8b76e141d325.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto;
+  background-color: black;
 }
 
 #searchLabel {
@@ -21,15 +18,12 @@ html {
   margin-bottom: 100px;
 }
 
+#logo {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
+
 .searchResults {
   color: white;
 }
-
-/* @media only screen and (max-width: 750px) {
-    body {
-      background-image: url(https://i.pinimg.com/originals/64/ed/3a/64ed3a481498bccf61aafc4bf3151a2f.jpg);
-      background-size: auto;
-      opacity: 60%;
-      background-repeat: no-repeat;
-    }
-  } */
