--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,31 +20,27 @@ html {
   margin-top: 2px;
   border-radius: 5px;
   background: #00b3ff;
-  box-shadow: 2px 2px 2px #0098d9
+  box-shadow: 2px 2px 2px #0098d9;
 }
 
 #searchForm {
-  margin-top: 25px;
   margin-bottom: 25px;
 }
 
-#logo {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-}
-
 #music-list {
-    text-align: center;
-    font-size: 25px;
+  text-align: center;
+  font-size: 25px;
 }
 
 audio {
-    padding-top: 5px;
-    padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 10px;
 }
 
 .searchResults {
   color: white;
+}
 
+.container {
+  padding: 10px;
 }
