--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background: linear-gradient(#005169, #000000) no-repeat center center fixed;
+  background: linear-gradient(#000000, #005169) no-repeat center center fixed;
   font-family: Helvetica, sans-serif;
   position: absolute;
   top: 0;
@@ -14,13 +14,12 @@ html {
   color: white;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
     1px 1px 0 #000;
+  text-align: center;
 }
 
 #add-music {
-  margin-top: 2px;
   border-radius: 5px;
   background: #00b3ff;
-  box-shadow: 2px 2px 2px #0098d9;
 }
 
 #searchForm {
@@ -47,4 +46,8 @@ audio {
 
 #gif-image {
   text-align: center;
+}
+
+#searchAndSub {
+  justify-content: center;
 }
